Use relative paths in html

--- a/semaphores.html
+++ b/semaphores.html
@@ -1,11 +1,11 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <script type="text/javascript" src="/js/road.js"></script>
-    <script type="text/javascript" src="/js/ui.js"></script>
+    <script type="text/javascript" src="js/road.js"></script>
+    <script type="text/javascript" src="js/ui.js"></script>
   </head>
   <body>
 
@@ -23,9 +23,9 @@
                   </div>
                 </div>
             </div>
-        </div>  
+        </div>
     </section>
-    
+
     <script>
         window.addEventListener('load', Game.start);
         window.addEventListener('load', UI.render);
