Temporal paths for assets, will change for template later

--- a/semaphores.html
+++ b/semaphores.html
@@ -1,11 +1,11 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="/adt_demo/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/adt_demo/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" type="text/css" href="/adt_demo/css/style.css">
 
-    <script type="text/javascript" src="js/road.js"></script>
-    <script type="text/javascript" src="js/ui.js"></script>
+    <script type="text/javascript" src="/adt_demo/js/road.js"></script>
+    <script type="text/javascript" src="/adt_demo/js/ui.js"></script>
   </head>
   <body>
 
